--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "attendance",
-	"version": "0.0.1",
+	"name": "attendance-tracker",
+	"version": "1.0.1",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
