--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,5 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 /src-tauri/target
 .vscode
-resources/android/**/*
 Versions-Fixes
-android
+/android
