--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "attendance-tracker",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -50,6 +50,7 @@
 	"type": "module",
 	"dependencies": {
 		"@capacitor/android": "^5.2.3",
+		"@capacitor/app": "^5.0.6",
 		"@capacitor/camera": "^5.0.7",
 		"@capacitor/core": "^5.2.3",
 		"@capacitor/filesystem": "^5.1.2",
